added basic client side display of files and dirs

--- a/static/index.html
+++ b/static/index.html
@@ -9,8 +9,7 @@
         <section id="appHeader">
             <div id="appTitle">X-Ray Image Processing for Cores</div>
         </section>
-        <section id='fileExplorer'>
-            
-        </section>
+        <section id='fileExplorer'></section>
+        <script src="fileExplorer.js"></script>
     </body>
 </html>
