added checkboxes next to files

--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,9 @@
         <section id="appHeader">
             <div id="appTitle">X-Ray Image Processing for Cores</div>
         </section>
-        <section id='fileExplorer'></section>
+        <section id='fileExplorer'>
+            <input id='selectAll' type='checkbox'></input><label>Select all</label>
+        </section>
         <script src="fileExplorer.js"></script>
     </body>
 </html>
