get selected checkboxes

--- a/static/index.html
+++ b/static/index.html
@@ -12,6 +12,9 @@
         <section id='fileExplorer'>
             <input id='selectAll' type='checkbox'></input><label>Select all</label>
         </section>
+        <section id='histogramSect'>
+            <button id='process' onclick='getSelected()'>Process</button>
         <script src="fileExplorer.js"></script>
+        <script src="histogram.js"></script>
     </body>
 </html>
