started adding histogram

--- a/static/index.html
+++ b/static/index.html
@@ -13,7 +13,8 @@
             <input id='selectAll' type='checkbox'></input><label>Select all</label>
         </section>
         <section id='histogramSect'>
-            <button id='process' onclick='getSelected()'>Process</button>
+            <button id='process' onclick='histogramAPI()'>Process</button>
+        </section>
         <script src="fileExplorer.js"></script>
         <script src="histogram.js"></script>
     </body>
