--- a/static/index.html
+++ b/static/index.html
@@ -14,6 +14,9 @@
         </section>
         <section id='histogramSect'>
             <button id='process' onclick='histogramAPI()'>Process</button>
+            <div>
+                <img id='histogram_img'></img>
+            </div>
         </section>
         <script src="fileExplorer.js"></script>
         <script src="histogram.js"></script>
