started adding math documentation

--- a/static/index.html
+++ b/static/index.html
@@ -106,6 +106,10 @@
             <div><button id='processFiles' onclick='processAPI()'>Process Files</button></div>
         </section>
         
+        <section class='lvl1 footer'>
+            <a href='math.html' target='_blank'>See the math behind the processing</a>
+        </section>
+        
         <script src='fileExplorer.js'></script>
         <script src='histogram.js'></script>
         <script src='process.js'></script>
