started adding processing steps

--- a/static/index.html
+++ b/static/index.html
@@ -73,7 +73,7 @@
                         <label>Distance the core is moved between images (cm)</label>
                     </div>
                     <div>
-                        <input id='autoDetect' type='radio' name='axisMethod' value='autoDetec' checked><label>Auto-detect core axis</label>
+                        <input id='autoDetect' type='radio' name='axisMethod' value='autoDetect' checked><label>Auto-detect core axis</label>
                         <input id='setAxis' type='radio' name='axisMethod' value='setAxis'><label>Set core axis</label>
                     </div>
                     <div class='axisInput'>
