--- a/static/math.html
+++ b/static/math.html
@@ -157,7 +157,7 @@
 		<section>
 			<h2>Histogram Stretching and Centering</h2>
 			<h3>Values</h3>
-			<p>O<sub>val</sub> = &mu;<sub>eff</sub>*&rho;*t<sub>ref</sub></p>
+			<p>O<sub>val</sub> = &mu;<sub>eff</sub>*&rho;*t<sub>max</sub></p>
 			<p>O<sub>min</sub> = ln(I<sub>max</sub> + 1.0) - ln(I<sub>high</sub> + 1.0)</p>
 			<p>O<sub>peak</sub> = ln(I<sub>max</sub> + 1.0) - ln(I<sub>peak</sub> + 1.0)</p>
 			<p>O<sub>max</sub> = ln(I<sub>max</sub> + 1.0) - ln(I<sub>low</sub> + 1.0)</p>
