renamed some variables, made changes to histogram sliders, added onload for image

--- a/static/index.html
+++ b/static/index.html
@@ -30,19 +30,16 @@
                     <img id='histogramImg'>
                 </div>
                 <div>
-                    <input id='leftBounds' type='range' class='slider' min='0'>
+                    <input id='leftBounds' type='range' class='slider' step='0.01' min='0.0' max='1.0' value='0.0'>
                     <label>Left edge &nbsp;</label>
-                    <span id='leftBoundsVal'></span>
                 </div>
                 <div>
-                    <input id='center' type='range' class='slider' min='0'>
+                    <input id='center' type='range' class='slider' step='0.01' min='0.0' max='1.0' value='0.5'>
                     <label>Peak position &nbsp;</label>
-                    <span id='centerVal'></span>
                 </div>
                 <div>
-                    <input id='rightBounds' type='range' class='slider' min='0'>
+                    <input id='rightBounds' type='range' class='slider' step='0.01' min='0.0' max='1.0' value=1.0>
                     <label>Right edge &nbsp;</label>
-                    <span id='rightBoundsVal'></span>
                 </div>
             </div>
         </section>
