--- a/static/math.html
+++ b/static/math.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset='UTF-8'>
         <title>Math Behind the Image Processing</title>
-        <link rel='stylesheet' href='math.css'>
+        <link rel='stylesheet' href='styles.css'>
     </head>
     <html>
 	<body>
