added console display on startup, added button locking to UI

--- a/static/index.html
+++ b/static/index.html
@@ -20,7 +20,10 @@
         
         <section class='lvl1'>
             <div class='title1'>Image Histogram</div>
-            <div><button id='getHistogram' onclick='histogramAPI()'>Get Histogram</button></div>
+            <div>
+                <button id='getHistogram' onclick='histogramAPI()'>Get Histogram</button>
+                <span id='histogramIndicator'></span>
+            </div>
             <div class='lvl2'>
                 <div>
                     <img id='histogramImg'>
@@ -81,7 +84,10 @@
             </div>
             <div class='lvl2'>
                 <div class='title2'>Run Program</div>
-                <div><button id='processFiles' onclick='processAPI()'>Process Files</button></div>
+                <div>
+                    <button id='processFiles' onclick='processAPI()'>Process Files</button>
+                    <span id='processIndicator'></span>
+                </div>
             </div>
         </section>
         
