fixed broken setup route, parsed setup inputs for JSON

--- a/static/setup.html
+++ b/static/setup.html
@@ -128,7 +128,7 @@
             </div>
             <div class='lvl2'>
                 <div class='title2'>Update Settings</div>
-                <div><button id='updateSettings' onclick='settingsAPI()'>Save</button></div>
+                <div><button id='updateSettings' onclick='sendSetupAPI()'>Save</button></div>
             </div>
         </section>
 
